2012-05-30 Dario Rodriguez <dario@artica.es>

	* include/functions_reporting.php: Fixed group view,
	unkown agent count was wrong.

2012-05-29  Sancho Lerena <slerena@artica.es>

	* pandora_console.redhat.spec,
	pandora_console_install,
	pandora_console_upgrade,
	DEBIAN/control,
	pandora_console.spec: Updated version on package specs.

2012-05-29  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions_api.php: Merged from trunk. Added
	"group_id", "tag" and "event_type" to the get_events
	filters. Some fixes.

2012-05-28  Sancho Lerena <slerena@artica.es>

	* godmode/agentes/module_manager_editor_plugin.php: A bit more
	space on IP target field (a URL doesn't fit there!). 

	* include/styles/pandora.css: Plugin description is not shown
	in small font.

2012-05-27  Junichi Satoh  <junichi@rworks.jp>

	* general/pandora_help.php: Fixed i18n translation does not work
	in the help window.

	* include/help/ja/help_main_help.php: Added new general
	introduction help file.

	Merged from trunk.

2012-05-24  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Updated defaults: compact is not enabled by default
	and dbschema version is updated.

2012-05-24 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/functions.php: set the wget method
	by default.
	
	* extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/update_pandora.php: cleaned source code
	style.

2012-05-22  Sergio Martin <sergio.martin@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed 
	desactivation of history data when edit a policy module
	Merged from trunk

2012-05-22  Sancho Lerena <slerena@artica.es>

	* include/functions_ui.php: Added definition for module unknown.

	* operation/agentes/status_monitor.php: unknown modules are always
	drawn in grey. Fixed inconsistent behaviour.

	* images/status_sets/color_text/module_unknown.png: Missing image.

2012-05-22  Junichi Satoh  <junichi@rworks.jp>
