@@ -838,4 +838,216 @@ function groups_create_group($group_name, $rest_values){
 }
 
 
+// Get unknown agents by using the status code in modules.
+
+function groups_agent_unknown ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT( DISTINCT tagente_estado.id_agente) FROM tagente_estado, tagente, tagente_modulo WHERE tagente.disabled = 0 AND tagente_estado.utimestamp != 0 AND tagente_modulo.id_agente_modulo = tagente_estado.id_agente_modulo AND tagente_modulo.disabled = 0 AND estado = 3 AND tagente_estado.id_agente = tagente.id_agente AND tagente.id_grupo IN $group_clause");
+	
+}
+
+// Get monitor NOT INIT, except disabled AND async modules
+
+function groups_monitor_not_init ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(tagente_estado.id_agente_estado)
+				FROM tagente_estado, tagente, tagente_modulo
+				WHERE tagente.id_grupo IN $group_clause AND tagente.disabled = 0 
+				    AND tagente.id_agente = tagente_estado.id_agente
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo 
+					AND tagente_modulo.disabled = 0
+					AND tagente_modulo.id_tipo_modulo NOT IN (21,22,23,24) AND utimestamp = 0");
+	
+}
+
+// Get monitor OK, except disabled and non-init
+
+function groups_monitor_ok ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(tagente_estado.id_agente_estado)
+				FROM tagente_estado, tagente, tagente_modulo
+				WHERE tagente.id_grupo IN $group_clause AND tagente.disabled = 0
+					AND tagente_estado.id_agente = tagente.id_agente AND tagente_estado.estado = 0 
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo AND tagente_modulo.disabled = 0 AND tagente_estado.utimestamp != 0");	
+}
+
+// Get monitor CRITICAL, except disabled and non-init
+
+function groups_monitor_critical ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(tagente_estado.id_agente_estado)
+				FROM tagente_estado, tagente, tagente_modulo
+				WHERE tagente.id_grupo IN $group_clause AND tagente.disabled = 0
+					AND tagente_estado.id_agente = tagente.id_agente AND tagente_estado.estado = 1 
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo AND tagente_modulo.disabled = 0 AND tagente_estado.utimestamp != 0");
+					
+}
+
+// Get monitor WARNING, except disabled and non-init
+
+function groups_monitor_warning ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(tagente_estado.id_agente_estado)
+				FROM tagente_estado, tagente, tagente_modulo
+				WHERE tagente.id_grupo IN $group_clause AND tagente.disabled = 0
+					AND tagente_estado.id_agente = tagente.id_agente AND tagente_estado.estado = 2 
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo AND tagente_modulo.disabled = 0 AND tagente_estado.utimestamp != 0");
+					
+}
+
+// Get monitor UNKNOWN, except disabled and non-init
+
+function groups_monitor_unknown ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(tagente_estado.id_agente_estado)
+				FROM tagente_estado, tagente, tagente_modulo
+				WHERE tagente.id_grupo IN $group_clause AND tagente.disabled = 0
+					AND tagente_estado.id_agente = tagente.id_agente AND tagente_estado.estado = 3 
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo AND tagente_modulo.disabled = 0 AND tagente_estado.utimestamp != 0");
+					
+}
+
+// Get alerts defined for a given group, except disabled 
+
+function groups_monitor_alerts ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(talert_template_modules.id)
+				FROM talert_template_modules, tagente_modulo, tagente_estado, tagente
+				WHERE tagente.id_grupo IN $group_clause AND tagente_modulo.id_agente = tagente.id_agente
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
+					AND tagente_modulo.disabled = 0 AND tagente.disabled = 0  			
+					AND	talert_template_modules.disabled = 0 
+					AND talert_template_modules.id_agent_module = tagente_modulo.id_agente_modulo");
+					
+}
+
+// Get alert configured currently FIRED, except disabled 
+
+function groups_monitor_fired_alerts ($group_array) {
+
+	// If there are not groups to query, we jump to nextone
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(talert_template_modules.id)
+				FROM talert_template_modules, tagente_modulo, tagente_estado, tagente
+				WHERE tagente.id_grupo IN $group_clause AND tagente_modulo.id_agente = tagente.id_agente
+					AND tagente_estado.id_agente_modulo = tagente_modulo.id_agente_modulo
+					AND tagente_modulo.disabled = 0 AND tagente.disabled = 0 
+					AND talert_template_modules.disabled = 0 
+					AND talert_template_modules.id_agent_module = tagente_modulo.id_agente_modulo 
+					AND times_fired > 0");
+					
+}
+
+// Total agents in a group, except disabled ones
+
+function groups_total_agents ($group_array) {
+	
+	if (empty ($group_array)) {
+		return 0;
+		
+	} else if (!is_array ($group_array)){
+		$group_array[0] = $group_array;
+	}
+			
+	$group_clause = implode (",", $group_array);
+	$group_clause = "(" . $group_clause . ")";
+	
+	return db_get_sql ("SELECT COUNT(*) FROM tagente WHERE id_grupo IN $group_clause AND disabled = 0");
+					
+}
+
 ?>
